--- a/galaxies/galaxy.css
+++ b/galaxies/galaxy.css
@@ -16,8 +16,8 @@ body{
     --inpcolor: #000;
     --navclr: #fff;
 
-    --hcolor: rgb(0, 215, 215);
-    --mobilebg: rgba(0, 95, 90, 0.527);
+    --hcolor: rgb(58, 120, 190);
+    --mobilebg: rgba(13, 70, 155, 0.527);
 
     --hcolor2:rgb(167, 167, 167);
     --mobilebg2: rgba(39, 39, 39, 0.692);
@@ -44,7 +44,7 @@ body{
     --navclr: #000;
     --contacts:#ea6f42;
     --hcolor: #fff;
-    --mobilebg: #a751328f;
+    --mobilebg: #ff99758f;
 
     --hcolor2:whitesmoke;
     --mobilebg2: rgba(184, 182, 178, 0.692);
@@ -170,8 +170,9 @@ i{
     border-radius: 50px;
     height: 7vh;
     user-select: none;
+    transition: 0.7s;
 }
-#fw{
+.fw{
     margin-left: 3vh;
 }
 .left p{
@@ -191,7 +192,7 @@ i{
     transform: translateY(-20%);
 }
 .left:hover, .right:hover{
-    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 7rem;
 
 }
 .left{
@@ -201,7 +202,7 @@ i{
     right: 3px;
 }
 .slide1{
-    background-image:var(--backgrad), url(../temp/exo1.jpg);
+    background-image:var(--backgrad), url(../temp/galaxy1.jpg);
     background-size: cover;
 }
 #smallscreen{
@@ -209,36 +210,44 @@ i{
 }
 
 .slide1 .description{
-    width: 30%;
+    width: 20%;
     height: 50vh;
     top: 0;
-    margin-left:20vh;
-    margin-top: 15vh;
+    margin-left:17vh;
+    margin-top: 23vh;
     transform: translateY(-1%);
     text-align: center;
     text-align: justify;
 }
 .slide1 h1{
-    color: rgb(255, 139, 139);
+    color: rgb(123, 71, 207);
     /* -webkit-text-stroke: 2.3px var(--hbr); */
     font-size: 5rem;
 }
-
+.slide1 .rotated{
+    margin-left: 83%;
+}
+#tt1{
+    margin-top: 5vh;
+}
+#bt1{
+    margin-top: 5vh;
+}
 .slide1 p{
     font-size: 1.3rem;
     margin-top: 2.7vh;
 }
 .slide2{
-    background-image: var(--backgrad), url(../temp/exo2.jpg);
+    background-image: var(--backgrad), url(../temp/galaxy2.jpg);
 
 }
 .slide2 .description{
     /* background-color: rgb(121, 121, 0); */
-    width: 30%;
+    width: 20%;
     height: 50vh;
     top: 0;
     margin-left:20vh;
-    margin-top: 40vh;
+    margin-top: 13vh;
     transform: translateY(-1%);
     text-align: center;
     text-align: justify;
@@ -247,100 +256,49 @@ i{
     color: rgb(163, 152, 152);
     /* -webkit-text-stroke: 2.3px var(--hbr); */
     font-size: 5rem;
-    margin-bottom: 3vh;
+    /* margin-left: 100%; */
+}
+.slide2 .rotated{
+    margin-left: 80%;
 }
 .slide2 p{
     font-size: 1.3rem;
 }
+#tt2{
+    margin-top: 5vh;
+}
+#bt2{
+    margin-top: 3vh;
+}
 .slide3{
-    background-image:var(--backgrad), url(../temp/exo3.jpg);
+    background-image:var(--backgrad), url(../temp/galaxy3.jpg);
 }
 .slide3 .description{
     /* background-color: rgb(121, 121, 0); */
-    width: 30%;
+    width: 20%;
     height: 50vh;
     top: 0;
     margin-left:17vh;
-    margin-top: 35vh;
+    margin-top: 23vh;
     transform: translateY(-1%);
     text-align: center;
-    text-align: justify;
+    text-align:justify;
 }
 .slide3 h1{
     color: rgb(231, 151, 75);
     /* -webkit-text-stroke: 2.3px var(--hbr); */
-    font-size: 5rem;
+    font-size: 4.3rem;
     margin-bottom: 3vh;
 }
 .slide3 p{
     font-size: 1.3rem;
 }
-#rotated{
+.slide3 .rotated{
+    margin-left: 23vh;
+}
+.rotated{
     font-size: 2rem;
     text-align: center;
-}
-@media screen and (max-width: 770px) {
-    body{
-        height: 100vh;
-    }
-    .header{
-        /* padding: 0.3%; */
-        background-color: var(--bgnav);
-        height: 6.4vh;
-    }
-    .icons{
-        display: inline-flex;
-        margin-right: 5vh;
-    }
-    .navbar{
-        position: absolute;
-        width: 100%;
-        top: 5vh;
-        height: 0;
-        background-color: var(--bgnav);
-        transition: 0.3s ease-in;
-        overflow: hidden;
-        left: 0;
-    }
-    .navbar a{
-        display: block;
-        text-align: center;
-        margin: 3.3vh;
-        /* text-decoration: underline;
-        text-underline-offset: 10px; */
-    }
-    #contacts{
-    text-align: center;
-    width: 100%;
-    margin-right: 0;
-    font-size: 1.3rem;
-    color: #fff;
-    font-weight: 500;
-    font-family: "Jersey 15", sans-serif;
-    display: block;
-    letter-spacing: 10px;
-        
-    }
-    #contacts a{
-        font-size: 1.7rem;
-        color: var(--txtcolor);
-        display: inline-block;
-        letter-spacing: 50%;
-        margin: 0;
-    }
-    /* Чекбокс для открытия навбара */
-    #cross{
-        display: none;
-    }
-    #menuwka:checked~.icons #menu{
-        display: none;
-    }
-    #menuwka:checked~.navbar{
-        height: 30vh;
-    }
-    #menuwka:checked~.icons #cross{
-        display: block;
-    }
 }
 @media screen and (max-width: 435px) {
     .header{
@@ -392,31 +350,42 @@ i{
         /* background-color: palegreen; */
         width: 100%;
         margin: 0;
-        margin-top: 10vh;
+        margin-top: 5vh;
+        color:var(--navclr);
     }
     .slide1 h1{
         color: var(--hcolor);
         -webkit-text-stroke: 2.3px var(--hbr);
+        text-align: center;
         margin-left: 1vh;
         margin-top: 0;
         margin-bottom: 3vh;
-        line-height: 70px;
+        line-height: 50px;
+        font-size: 3.9rem;
         /* background: rgb(64, 40, 121); */
     }
-    .slide1 #rotated{
+    .slide1 .rotated{
         font-size: 2rem;
         -webkit-text-stroke: 0px var(--hbr);
-        width: 90px;
-        height: 50px;
-        text-align: center;
-        justify-content: center;
-        margin-left: 2.0vh;
+        font-size: 1.7rem;
+        margin-top: 0;
+        margin-left: 50%;
+    }
+    #tt1{
+        margin-top: 13vh;
+    }
+    #bt1{
+        margin-top: 10vh;
     }
     #smallscreen{
         display: block;
     }
     #bigscreen{
         display: none;
+    }
+    .description p{
+       margin-left: 10px;
+       margin-right: 10px;
     }
     .slide1 p{
         margin-top: 10vh ;
@@ -439,15 +408,13 @@ i{
         line-height: 70px;
         /* background: rgb(64, 40, 121); */
     }
-    .slide2 #rotated{
+    .slide2 .rotated{
         font-size: 2rem;
-        color: rgb(190, 179, 173);
+        color: var(--hcolor2);
         -webkit-text-stroke: 0px white;
         width: 90px;
         height: 50px;
-        text-align: center;
-        justify-content: center;
-        margin-left: 2.0vh;
+        margin-left: 30vh;
     }
     .slide2 p{
         margin-top: 10vh ;
@@ -455,6 +422,15 @@ i{
         background-color: var(--mobilebg2);
         border-radius: 30px;
         padding: 10px;
+    }
+    #tt2{
+        margin-top: 3vh;
+    }
+    #bt2{
+        margin-top: 13vh;
+    }
+    .closed{
+        display: none;
     }
     .slide3 .description{
         /* background-color: palegreen; */
@@ -471,15 +447,16 @@ i{
         line-height: 70px;
         /* background: rgb(64, 40, 121); */
         text-align: center;
+        font-size: 3.9rem;
     }
-    .slide3 #rotated{
+    .slide3 .rotated{
         font-size: 2rem;
         -webkit-text-stroke: 0px var(--hbr);
         width: 90px;
         height: 50px;
         text-align: center;
         justify-content: center;
-        margin-left: 18.0vh;
+        margin-left: 10vh;
     }
     .slide3 p{
         margin-top: 10vh ;
@@ -487,6 +464,10 @@ i{
         border-radius: 30px;
         padding: 10px;
         color: var(--navclr);
+        height: 150px;
+    }
+    #tt3{
+        margin-top: 27vh;
     }
     .left, .right{
         font-weight: bold;
@@ -504,6 +485,7 @@ i{
     }
     .left:hover, .right:hover{
         background: none;
+        font-size: 3rem;
     }
     .left{
         left: 60%;
