--- a/test/test.css
+++ b/test/test.css
@@ -121,7 +121,7 @@ i{
     height: 50vh;
     margin-top: 23vh;
     width: 80%;
-    margin-left: 10vh;
+    margin-left: 13vh;
 }
 /* Стили для текста в текстовом блоке */
 
@@ -136,10 +136,11 @@ h1{
 .textBlock p{
     margin-top: 1vh;
 }
-#fw{
+.fw{
     margin-left: 3vh;
 }
 .description{
+    width: 77%;
     margin-left: 3vh;
     color: white;
     font-size: 1.43rem;
@@ -171,7 +172,7 @@ h1{
     width: 50vh;
     display: flex;
     float: right;
-    margin-top: 20vh;
+    margin-top: 23vh;
     margin-left: 15vh;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     color: var(--txtcolor);
@@ -189,7 +190,7 @@ h1{
     height: 450px;
     display: flex;
     float: right;
-    margin-top: 20vh;
+    margin-top: 27vh;
     margin-left: 15vh;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     color: var(--txtcolor);
@@ -260,7 +261,7 @@ input[type=radio] {
     width: 100%;
     height: 2em;
 }
-#hd{
+.hd{
     display: flex;
     justify-content: center;
     width: 100%;
@@ -279,7 +280,7 @@ label{
     margin-left: 25px;}
 
 .btn{
-    margin-top: 50px;
+    margin-top: 35px;
     display: inline-flex;
     width: 25vh;
     height: 27px;
@@ -334,7 +335,7 @@ label{
         /* background-color: bisque; */
         grid-area: textBlock;
         height: 70vh;
-        margin-top: 15vh;
+        margin-top: 30vh;
         padding-right: 3vh;
         margin-left: 7vh;
 
@@ -404,6 +405,9 @@ label{
         width: 70%; 
         margin: 29vh auto 10px;
         margin-bottom: 100px;
+    }
+    #space{
+        height: 10px;
     }
     .result-container{
         width: 70%; 
@@ -497,6 +501,9 @@ label{
         letter-spacing: 50%;
         margin: 0;
     }
+    #class{
+        display: none;
+    }
     /* Чекбокс для открытия навбара */
     #cross{
         display: none;
@@ -512,11 +519,11 @@ label{
     }
     .form-container{
         width: 90%; 
-        margin-top: 29vh;
+        margin-top: 13vh;
     }
     .result-container{width: calc(100% - 30px); 
         height: 500px;    
-        margin-top: 30vh;
+        margin-top: 13vh;
     }
     .bkb{
         margin-top: 19.3vh;
