--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -361,7 +361,9 @@ label{
 
 .pics{
     display: grid;
-    width: 100%;
+    width: 90%;
+    margin-left: 5%;
+    justify-content: center;
     height: 83vh;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
@@ -400,10 +402,11 @@ label{
     display: grid;
     grid-area: pic;
     background-color: rgba(0, 0, 0, 0.5);
-    width: 350px;
+    width: 330px;
     height: 400px;
     margin-top: 5vh;
     margin-left: 0px;
+    margin-right: 39px;
     padding: 0;
     align-items: center;
     justify-content: center;
@@ -418,7 +421,7 @@ label{
     transform: translateX(6%);
 }
 .pic img{
-    width: 350px;
+    width: 330px;
     height: 400px;
 }
     .header{
