--- a/exoplanets/exoplanets.css
+++ b/exoplanets/exoplanets.css
@@ -443,7 +443,7 @@ i{
         margin-right: 10px;
     }
     #tt1{
-        margin-top: 15vh;
+        margin-top: 7vh;
     }
     .slide2 .description{
         /* background-color: palegreen; */
@@ -480,7 +480,7 @@ i{
         margin-right: 10px;
     }
     #tt2, #bt2{
-        margin-top: 9vh;
+        margin-top: 6vh;
     }
     .slide3 .description{
         /* background-color: palegreen; */
@@ -516,8 +516,11 @@ i{
         margin-left: 10px;
         margin-right: 10px;
     }
-    #tt3, #bt3{
-        margin-top: 9vh;
+    #tt3{
+        margin-top: 5vh;
+    }
+    #bt3{
+        margin-top: 7vh;
     }
     .left, .right{
         font-weight: bold;
